# spark-grandes-volumenes

./: Pipfile  pyproject.toml
01-sparkconfig/: HelloWorld.py  err.txt  log.txt  nb1_sparkconfig.ipynb  out.txt
cure-algorithm/: Clustering.ipynb
k-means-spark/: data.csv  generate_data.ipynb  k-means.ipynb  k_means.ipynb
