[project]
name = "mineria-de-datos"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "David Armendariz", email = "david.adrian.a.p@gmail.com"},
]
dependencies = [
    "notebook~=7.1.0",
    "pyspark~=3.5.0",
    "numpy~=1.26.4",
    "matplotlib~=3.8.3",
    "pandas~=2.2.1",
    "scikit-learn>=1.4.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = false
name = "pip_conf_index_global"

[tool.pdm.dev-dependencies]
dev = []
